RESOLVED FIXED159599
REGRESSION (r202931): breaks release builds with ASSERT_WITH_SECURITY_IMPLICATION for fuzzing
https://bugs.webkit.org/show_bug.cgi?id=159599
Summary REGRESSION (r202931): breaks release builds with ASSERT_WITH_SECURITY_IMPLICA...
Antti Koivisto
Reported 2016-07-09 07:55:08 PDT
Make RenderStyle::deletionHasBegun() available with ENABLE(SECURITY_ASSERTIONS)
Attachments
Patch (2.49 KB, patch)
2016-07-09 07:58 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2016-07-09 07:55:27 PDT
Antti Koivisto
Comment 2 2016-07-09 07:58:53 PDT
Chris Dumez
Comment 3 2016-07-09 08:16:39 PDT
Comment on attachment 283259 [details] Patch r=me
WebKit Commit Bot
Comment 4 2016-07-09 08:48:09 PDT
Comment on attachment 283259 [details] Patch Clearing flags on attachment: 283259 Committed r203031: <http://trac.webkit.org/changeset/203031>
WebKit Commit Bot
Comment 5 2016-07-09 08:48:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.