REGRESSION (r202931): breaks release builds with ASSERT_WITH_SECURITY_IMPLICATION for fuzzing https://bugs.webkit.org/show_bug.cgi?id=159599 rdar://problem/27248835

Reviewed by Chris Dumez.

Make RenderStyle::deletionHasBegun() available with ENABLE(SECURITY_ASSERTIONS)

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::~RenderStyle):
* rendering/style/RenderStyle.h:
(WebCore::RenderStyle::deletionHasBegun):


Canonical link: https://commits.webkit.org/177741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203031 268f45cc-cd09-0410-ab3c-d52691b4dbfc